--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nrwl/next": "12.8.0",
     "core-js": "^3.6.5",
     "next": "11.1.0",
+    "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
